[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labtrack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools]
packages = ["labtrack"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Alembic migrations are a frozen, hand-augmented ledger — never reformat/lint them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # `ruff format` owns line length; E501 only nags on long strings/comments it can't wrap

[tool.mypy]
python_version = "3.12"
strict = true
files = ["labtrack"]
plugins = []
warn_unused_ignores = true
